Kyrylo/authc 3601 fix spacing for columns in cf landing page (#1921)
* feat: new component

* chore: header info

* feat: create `manage embedments` page

* refactor: updating contact form types

* fix: tests

* fix: review comments

* fix: add paddings

* fix: tests

* fix: make the manual steps closed by default for cf connected to the shopify

* fix: prevent loading the pages if contact form is not connected to the shop

* fix: tests

* error: add tests

* fix: fix nested <a> element and infinity loop

* fix: loading state

* fix: condition

* fix: add tests

---------

--- a/src/pages/settings/contactForm/views/ContactFormStartView/ManageContactForms/ManageContactForms.less
+++ b/src/pages/settings/contactForm/views/ContactFormStartView/ManageContactForms/ManageContactForms.less
@@ -4,8 +4,7 @@
     .contactFormsTableHead {
         tr {
             td {
-                padding-top: @layout-spacing-m;
-                padding-bottom: @layout-spacing-xs;
+                padding: 20px 24px;
             }
         }
     }
